<resources>
    <string name="app_name">RecipesKT</string>
    <string name="picture">picture</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="ingredients">Ingredients</string>
    <string name="nutrition">Nutrition</string>
    <string name="calories">Calories</string>
    <string name="protein_g">Protein, g</string>
    <string name="fat_g">Fat, g</string>
    <string name="carbs_g">Carbs, g</string>
    <string name="set_preparation_time">Set preparation time</string>
    <string name="persons">Persons</string>
    <string name="url_to_pictures">URL to pictures:</string>
    <string name="category">Category</string>
    <string name="add_description">Add description</string>
    <string name="name">Name</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="soup">Soup</string>
    <string name="salad">Salad</string>
    <string name="main_dish">Main Dish</string>
    <string name="add_ingredients">Add ingredients</string>
    <string name="add_nutrition_facts">Add nutrition facts: *</string>
    <string name="nutrition_comment">* If unknown, leave blank or enter negative values</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="dot_symbol">■</string>
    <string name="minus">—</string>
    <string name="plus">+</string>
</resources>
