<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>
        <!--tools:context=".ui.edit.EditActivity"-->

<!--
    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>
-->

    <androidx.core.widget.NestedScrollView
            android:id="@+id/ns_view_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
            <!--android:layout_marginTop="?attr/actionBarSize"-->

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:paddingBottom="16dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:showIn="@layout/activity_edit"
        >

            <TextView
                    android:id="@+id/tv_pictures_label"
                    android:text="@string/url_to_pictures"
                    style="@style/header_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            <com.travijuu.numberpicker.library.NumberPicker
                    android:id="@+id/number_picker"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    numberpicker:min="1"
                    numberpicker:max="4"
                    numberpicker:unit="1"
                    numberpicker:focusable="false"
                    numberpicker:custom_layout="@layout/number_picker_custom_layout"
                    app:layout_constraintTop_toTopOf="@+id/tv_pictures_label"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_pictures_label" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_pictures_label" android:layout_marginStart="8dp"/>
            <LinearLayout
                    android:id="@+id/url_container"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/number_picker">
            </LinearLayout>
            <View
                    android:id="@+id/divider_edit_1"
                    style="@style/horizontal_divider"
                    app:layout_constraintTop_toBottomOf="@+id/url_container"
                    app:layout_constraintStart_toStartOf="@+id/url_container"
                    app:layout_constraintEnd_toEndOf="@+id/url_container" android:layout_marginTop="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_name_edit"
                    android:hint="@string/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:counterEnabled="true"
                    app:errorEnabled="true"
                    app:counterMaxLength="100"
                    app:layout_constraintTop_toTopOf="@+id/divider_edit_1" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ti_et_name_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionDone"
                />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_persons_edit"
                    android:hint="@string/persons"
                    android:layout_width="0dp"
                    style="@style/Widget.AppCompat.Spinner.DropDown"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/ti_name_edit"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/ti_time_edit" android:layout_marginEnd="8dp">

                <ru.virarnd.recipeskt.common.InstantAutoComplete
                        android:id="@+id/autocomplete_tv_persons_edit"
                        tools:text="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textEditSuggestionItemLayout="@layout/item_simple_spinner"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_time_edit"
                    android:hint="@string/set_preparation_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/ti_name_edit"
                    app:layout_constraintStart_toEndOf="@+id/ti_persons_edit"
                    app:layout_constraintHorizontal_bias="0.5" android:layout_marginStart="8dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ti_et_preparation_time_edit"
                        tools:text="55 min"
                        android:drawableEnd="@drawable/time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_category_edit"
                    android:hint="@string/category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Spinner.DropDown"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/ti_persons_edit" android:layout_marginEnd="8dp">

                <ru.virarnd.recipeskt.common.InstantAutoComplete
                        android:id="@+id/autocomplete_tv_category_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_description_edit"
                    android:hint="@string/add_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="500"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/ti_category_edit"
                    android:layout_marginEnd="8dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ti_et_description_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:textSize="14sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_ingredients_edit"
                    android:hint="@string/add_ingredients"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="100"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/ti_description_edit">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ti_et_ingredients_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:textSize="14sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                    android:id="@+id/tv_nutrition_label"
                    android:text="@string/add_nutrition_facts"
                    style="@style/header_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/ti_ingredients_edit"
                    android:textColor="@android:color/black"/>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_calories_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/calories"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_nutrition_label"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/ti_protein_edit" android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ti_et_calories_value"
                        android:inputType="numberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_protein_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/protein_g"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_nutrition_label"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toEndOf="@+id/ti_calories_edit"
                    app:layout_constraintHorizontal_bias="0.5" android:layout_marginStart="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ti_et_protein_value"
                        android:inputType="numberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_fat_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/fat_g"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/ti_calories_edit"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/ti_carbs_edit" android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ti_et_fat_value"
                        android:inputType="numberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_carbs_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/carbs_g"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/ti_calories_edit"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toEndOf="@+id/ti_fat_edit"
                    app:layout_constraintHorizontal_bias="0.5" android:layout_marginStart="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ti_et_carbs_value"
                        android:inputType="numberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                    android:text="@string/nutrition_comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_comment" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/ti_fat_edit" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:textSize="12sp"
                    android:textColor="@android:color/black"
                    android:textStyle="italic"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:layout_behavior=".ui.detail.FabBehavior"
            app:srcCompat="@drawable/save_option"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>