<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordinatorLayout">

    <androidx.core.widget.NestedScrollView
            android:id="@+id/ns_view_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdge="none"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="8dp"
                android:paddingBottom="16dp"
                android:id="@+id/nested_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
                <!--tools:showIn="@layout/activity_detail"-->
            <androidx.viewpager.widget.ViewPager
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_gravity="top"
                    app:layout_constraintTop_toTopOf="@+id/nested_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/my_half_base_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/my_half_base_margin">
            </androidx.viewpager.widget.ViewPager>

            <TextView
                    android:id="@+id/detail_header"
                    android:layout_width="0dp" android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="@dimen/my_half_base_margin" app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toBottomOf="@+id/view_pager"
                    tools:text="Fantastic Black Bean Chili"
                    android:textSize="20sp" android:textColor="@android:color/black" android:textStyle="bold"/>
            <ImageView
                    android:id="@+id/iv_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/user_icon"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/my_half_base_margin"
                    app:layout_constraintTop_toBottomOf="@+id/detail_header"/>
            <TextView
                    android:id="@+id/tv_person_count"
                    tools:text="4 person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@+id/iv_person"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_person"
                    app:layout_constraintStart_toEndOf="@+id/iv_person" android:layout_marginStart="8dp"/>
            <ImageView
                    android:id="@+id/iv_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/time"
                    app:layout_constraintTop_toTopOf="@+id/tv_person_count"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_person_count"
                    app:layout_constraintStart_toEndOf="@+id/tv_person_count" android:layout_marginStart="32dp"/>
            <TextView
                    android:id="@+id/tv_detail_minutes"
                    tools:text="55 min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@+id/iv_timer"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_timer"
                    app:layout_constraintStart_toEndOf="@+id/iv_timer" android:layout_marginStart="8dp"/>
            <TextView
                    android:id="@+id/tv_detail_description"
                    tools:text="How to cook this"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_person_count"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
            <View
                    android:id="@+id/divider_1"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
                    style="@style/horizontal_divider"
            />
            <TextView
                    android:id="@+id/tv_ingredients_header"
                    android:text="@string/ingredients"
                    app:layout_constraintTop_toBottomOf="@+id/divider_1" app:layout_constraintStart_toStartOf="parent"
                    style="@style/header_2"
            />
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_ingredients"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_ingredients"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_ingredients_header"
                    app:layout_constraintHorizontal_bias="0.0"/>
            <View
                    android:id="@+id/divider_2"
                    app:layout_constraintTop_toBottomOf="@+id/rv_ingredients"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    style="@style/horizontal_divider"
            />
            <TextView
                    android:id="@+id/tv_nutrition_header"
                    android:text="@string/nutrition"
                    style="@style/header_2"
                    app:layout_constraintTop_toBottomOf="@+id/divider_2" app:layout_constraintStart_toStartOf="parent"
            />

            <TableLayout
                    android:id="@+id/tl_nutrition_table"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:stretchColumns="0|2|4|6"
                    app:layout_constraintTop_toBottomOf="@+id/tv_nutrition_header"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
            >

                <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                    <TextView
                            android:id="@+id/tv_calories_label"
                            android:text="@string/calories"
                            style="@style/tab_column_names"/>
                    <View android:id="@+id/divider_1a"
                          android:layout_width="2dp"
                          android:background="@android:color/darker_gray"
                          android:layout_height="match_parent"/>
                    <TextView
                            android:id="@+id/tv_protein_label"
                            android:text="@string/protein_g"
                            style="@style/tab_column_names"/>
                    <View android:id="@+id/divider_1b"
                          android:layout_width="2dp"
                          android:background="@android:color/darker_gray"
                          android:layout_height="match_parent"/>
                    <TextView
                            android:id="@+id/tv_fat_label"
                            android:text="@string/fat_g"
                            style="@style/tab_column_names"/>
                    <View android:id="@+id/divider_1c"
                          android:layout_width="2dp"
                          android:background="@android:color/darker_gray"
                          android:layout_height="match_parent"/>
                    <TextView
                            android:id="@+id/tv_carbs_label"
                            android:text="@string/carbs_g"
                            style="@style/tab_column_names"/>

                </TableRow>
                <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                    <TextView
                            android:id="@+id/tv_calories_quantity"
                            tools:text="331"
                            style="@style/tab_quantity_style"/>
                    <View android:id="@+id/divider_2a"
                          android:layout_width="2dp"
                          android:background="@android:color/darker_gray"
                          android:layout_height="match_parent"/>
                    <TextView
                            android:id="@+id/tv_protein_quantity"
                            tools:text="16.3"
                            style="@style/tab_quantity_style"/>
                    <View
                            android:id="@+id/divider_2b"
                            android:layout_width="2dp"
                            android:background="@android:color/darker_gray"
                            android:layout_height="match_parent"/>
                    <TextView
                            android:id="@+id/tv_fat_quantity"
                            tools:text="20.9"
                            style="@style/tab_quantity_style"/>
                    <View android:id="@+id/divider_2c"
                          android:layout_width="2dp"
                          android:background="@android:color/darker_gray"
                          android:layout_height="match_parent"/>
                    <TextView
                            android:id="@+id/tv_carbs_quantity"
                            tools:text="18.9"
                            style="@style/tab_quantity_style"/>
                </TableRow>
            </TableLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/edit"
            app:layout_behavior=".ui.detail.FabBehavior"
            app:layout_anchorGravity="bottom|end"
            app:layout_anchor="@id/ns_view_detail"

    />

</androidx.coordinatorlayout.widget.CoordinatorLayout>